fix: fixed review title alignment

--- a/frontend/src/components/Reviews/Review.css
+++ b/frontend/src/components/Reviews/Review.css
@@ -148,6 +148,7 @@
 
   .review .title {
     margin: 0;
+    text-align: center;
   }
 
   .review .title h3{
